--- a/nucleus-main/task-silo-service/src/main/resources/application.yml
+++ b/nucleus-main/task-silo-service/src/main/resources/application.yml
@@ -5,9 +5,9 @@ spring:
   application:
     name: task-silo-service
   datasource:
-    url: jdbc:postgresql://task-silo-db-test-2.culss6gmw8na.us-east-1.rds.amazonaws.com:5432/postgres
-    username: tasksilodbtest
-    password: tasksilodbpwd
+    url: jdbc:postgresql://mytest.culss6gmw8na.us-east-1.rds.amazonaws.com:5432/postgres
+    username: postgres
+    password: Sindhuj12
     driver-class-name: org.postgresql.Driver
     hikari:
       maximum-pool-size: 10
@@ -66,5 +66,5 @@ management:
 
 outbounds:
   user-service:
-    url: http://ec2-52-23-186-179.compute-1.amazonaws.com:8080
+    url: https://71vcy6gb48.execute-api.us-east-1.amazonaws.com/prod
     timeout: 5000
