--- a/nucleus-main/task-silo-service/src/main/resources/application.yml
+++ b/nucleus-main/task-silo-service/src/main/resources/application.yml
@@ -66,5 +66,5 @@ management:
 
 outbounds:
   user-service:
-    url: https://71vcy6gb48.execute-api.us-east-1.amazonaws.com/prod
+    url: http://52.23.186.179:8080
     timeout: 5000
